# Market_Data_Feed_Handler

./: CMakeLists.txt  README.md
docs/: DESIGN.md  GBM.md  QUESTIONS.md
scripts/: build.sh  run_client.sh  run_server.sh
src/client/: feed_handler.cpp  header.h  parser.cpp  socket.cpp  visualizer.cpp
src/common/: cache.cpp  latency_tracker.cpp  memory_pool.cpp  protocol.h
src/server/: client_manager.cpp  exchange_simulator.cpp  exchange_simulator.h  server.cpp  tick_generator.cpp
